k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app
  labels:
    name: flask-app
    app.kubernetes.io/name: flask-app
    app.kubernetes.io/component: namespace
